--- a/styles/style.css
+++ b/styles/style.css
@@ -158,6 +158,10 @@ font-size: 15px;
   bottom: 0;
   color: white;
  }
+ .footer-color{
+  color: #ec4a40;
+  line-height: 21px;
+ }
  @media only screen and (max-width: 770px) {
   .footer {
     display: flex !important;
@@ -213,3 +217,15 @@ font-size: 15px;
   color: white;
   padding:4px 0 ;
  }
+ /* Agb Page */
+ .agb-content{
+  margin-top: 90px;
+ }
+  /* faq Page */
+  .faq-content{
+    margin-top: 90px;
+   }
+   .font-bold{
+    font-weight: 500;
+    color: black;
+   }
