menu pages olusturuldu

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,231 +1,238 @@
+/* Intro Components */
+.intro-img {
+  height: 100vh;
+  width: 100%;
 
-  /* Intro Components */
-  .intro-img{
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-   height: 100vh;
-   width: 100%; 
-
-
-   background-size: cover;
-   background-position: center;
-   background-repeat: no-repeat;
-   
-   justify-content: center;
-   display: flex;
+  justify-content: center;
+  display: flex;
+}
+@media only screen and (max-width: 500px) {
+  .intro-content {
+    text-align: center;
   }
-  @media only screen and (max-width: 500px) {
-    .intro-content {
-      text-align: center;
-    }
-  }
-  .intro-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-    
-  }
-  .intro-button{
+}
+.intro-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+.intro-button {
   background-color: #171a20cc;
   border: 1px solid #171a20cc;
   border-radius: 24px;
   outline: none;
   padding: 10px 20px;
-   color: white;
-font-size: 15px;
+  color: white;
+  font-size: 15px;
+}
+/* Banner Components */
+.banner-img {
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: flex-end;
+  display: flex;
+}
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 24px;
+  padding: 32px 24px;
+  margin: 10px;
+}
+@media only screen and (max-width: 500px) {
+  .banner-content {
+    text-align: center;
+    margin: 0 10px;
   }
-  /* Banner Components */
-  .banner-img{
-
-    height: 100vh;
-    width: 100%; 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    align-items: center;
-    justify-content: flex-end;
-    display: flex;
-   }
-   .banner-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-    background-color: #f8f9fa;
-    border: 1px solid #f8f9fa;
-    border-radius: 24px;
-    padding:32px 24px ;
-    margin: 10px;
-   
-  }
-  @media only screen and (max-width: 500px) {
-    .banner-content {
-      text-align: center;
-      margin:  0 10px;
-    }
-    .banner-img{
-      justify-content: center;
-    
-    }
-  }
-  .banner-button{
-    border: 1px solid #171a20cc;
-    border-radius: 150px;
-    padding: 10px 30px;
-    background-color: #ffc107;
-    color:white;
-    font-size: 13px;
-  }
-
-  /* Alle Model */
-  .allemodel-img{
-
-    height: 100vh;
-    width: 100%; 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
+  .banner-img {
     justify-content: center;
-    display: flex;
-   }
-   .allemodel-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-   
   }
-  .allemodel-button{
-    margin-top: 40px;
-    padding: 10px 60px;
-    border: 1px solid #1e1e1e;
-    border-radius: 50px;
-    font-size: 30px !important;
-    color: rgb(0, 0, 0);
-  }
-  /* Footer Components */ 
+}
+.banner-button {
+  border: 1px solid #171a20cc;
+  border-radius: 150px;
+  padding: 10px 30px;
+  background-color: #ffc107;
+  color: white;
+  font-size: 13px;
+}
 
-  .medium-footer{
-    background-image: linear-gradient(to top right, black, gray);
-    color: #f8f9fa;
-   
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 60px;
-  }
-  .mid-footer-bot{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-  }
+/* Alle Model */
+.allemodel-img {
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-  .contact-tag{
-    font-size: 16px;
-    line-height: 1.4;
-    font-weight: 600;
-  }
-  .footer-info{
-    font-weight: 700;
-    font-size: 15px;
-  }
-  .footer-contact-title{
-    font-weight: 700;
-    font-size: 15px;
-  }
- .footer-info-text{
+  justify-content: center;
+  display: flex;
+}
+.allemodel-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+.allemodel-button {
+  margin-top: 40px;
+  padding: 10px 60px;
+  border: 1px solid #1e1e1e;
+  border-radius: 50px;
+  font-size: 30px !important;
+  color: rgb(0, 0, 0);
+}
+/* Footer Components */
+
+.medium-footer {
+  background-image: linear-gradient(to top right, black, gray);
+  color: #f8f9fa;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 60px;
+}
+.mid-footer-bot {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.contact-tag {
+  font-size: 16px;
+  line-height: 1.4;
+  font-weight: 600;
+}
+.footer-info {
+  font-weight: 700;
+  font-size: 15px;
+}
+.footer-contact-title {
+  font-weight: 700;
+  font-size: 15px;
+}
+.footer-info-text {
   font-size: 15px;
   font-weight: 500;
- }
- .footer-bottom{
+}
+.footer-bottom {
   background-color: #262123 !important;
- 
- }
- .footer-top{
+}
+.footer-top {
   display: flex;
-  
- }
- .footer-logo{
+}
+.footer-logo {
   width: 200px;
   height: 120px;
- }
+}
 
- .footer{
+.footer {
   background-color: #0a0a0a;
   width: 100%;
   padding: 50px 24px;
   bottom: 0;
   color: white;
- }
- .footer-color{
+}
+.footer-color {
   color: #ec4a40;
   line-height: 21px;
- }
- @media only screen and (max-width: 770px) {
+}
+@media only screen and (max-width: 770px) {
   .footer {
     display: flex !important;
     flex-direction: column !important;
     justify-content: center !important;
-   align-items: center !important;
-   text-align: center;
+    align-items: center !important;
+    text-align: center;
   }
 }
- /* WhyWe Components */ 
- .why-we{
+/* WhyWe Components */
+.why-we {
   background-image: linear-gradient(to top right, black, gray);
   background-position: center;
   background-size: cover;
-   
-   background-repeat: no-repeat;
+
+  background-repeat: no-repeat;
   height: 500px;
   color: white;
- }
- .whywe-title{
+}
+.whywe-title {
   display: flex;
- justify-content: center;
- flex-direction: column;
-
- }
- .whywe-icon{
-  
+  justify-content: center;
+  flex-direction: column;
+}
+.whywe-icon {
   justify-content: center;
   align-items: center;
- }
- /* Kontaktt page */
+}
+/* Kontaktt page */
 
- .contact-page{
+.contact-page {
   margin-top: 120px;
-  
- }
- .contact-title{
+}
+.contact-title {
   justify-content: center;
   display: flex;
   font-size: 30px;
   font-weight: 600;
-  
- }
- .contact-input{
-  outline: none; 
+}
+.contact-input {
+  outline: none;
   border: 1px solid #dfdfdf;
-
- }
- .contact-button{
+}
+.contact-button {
   background-color: #1e1e1e;
-  border: 1px solid #1e1e1e; 
+  border: 1px solid #1e1e1e;
   border-radius: 18px;
   color: white;
-  padding:4px 0 ;
- }
- /* Agb Page */
- .agb-content{
+  padding: 4px 0;
+}
+/* Agb Page */
+.agb-content {
   margin-top: 90px;
- }
-  /* faq Page */
-  .faq-content{
-    margin-top: 90px;
-   }
-   .font-bold{
-    font-weight: 500;
-    color: black;
-   }
+}
+/* faq Page */
+.faq-content {
+  margin-top: 90px;
+}
+.font-bold {
+  font-weight: 500;
+  color: black;
+}
+/* Menu */
+.menu-banner-img{
+  height: 100vh;
+  width: 100%;
+display: flex;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+align-items: center;
+  justify-content: flex-start;
+
+}
+.menu-banner-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 24px;
+  padding: 32px 24px;
+  margin: 10px;
+}
