--- a/styles/style.css
+++ b/styles/style.css
@@ -170,12 +170,27 @@
   height: 500px;
   color: white;
 }
+.BorderWyWe{
+  border: 1px solid white;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  
+ 
+}
+.mt-6{
+  margin-top: 60px;
+}
+.text-16{
+  font-size: 16px !important;
+}
 .whywe-title {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 .whywe-icon {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
