whywe components duzenleme

--- a/styles/style.css
+++ b/styles/style.css
@@ -170,6 +170,7 @@
   height: 500px;
   color: white;
 }
+
 .BorderWyWe{
   border: 1px solid white;
   border-radius: 50%;
@@ -178,8 +179,24 @@
   
  
 }
+.WhyWeBg{
+  background-image: radial-gradient(#525252 30%, #000000) !important;
+}
 .mt-6{
   margin-top: 60px;
+}
+.fz-25{
+  font-size: 25px !important;
+}
+.zoomWhyWe:hover {
+  transform: scale(1.10);
+  transition: transform .2s;
+}
+
+.display-4{
+  font-size: 25px !important;
+  font-weight: 300;
+  line-height: 1.2;
 }
 .text-16{
   font-size: 16px !important;
@@ -261,4 +278,13 @@ align-items: center;
 }
 .menu-contact-button:hover{
 color: #0a0a0a;
+}
+.content-image{
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  border-style: none;
+}
+.text-justify {
+  text-align: justify!important;
 }
