--- a/styles/style.css
+++ b/styles/style.css
@@ -288,3 +288,179 @@ color: #0a0a0a;
 .text-justify {
   text-align: justify!important;
 }
+/* before and after slider */
+
+@media screen and (max-width: 991px){ 
+.section-padding {
+    padding-top: 15px !important;
+}}
+.after-before {
+  position: relative;
+  color: #fff;
+}
+.section-padding {
+  padding: 30px 0;
+}
+section, p {
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  font-weight: 400px;
+  line-height: 1.5;
+  margin: 0;
+}
+.after-before .background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+}
+.bg-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.ontop {
+  position: relative;
+  z-index: 7;
+}
+.section-head h4 {
+  font-weight: 500;
+  font-size: 40px;
+  letter-spacing: 2px;
+}
+.playfont {
+  font-family: 'poppins', serif;
+}
+.after-before .dotsbg {
+  position: relative;
+}
+#before-after-slider {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.imago.animated {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.imago {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+#before-after-slider .overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 11;
+  opacity: 0;
+  transition: opacity .3s linear;
+}
+.twentytwenty-after-label, .twentytwenty-before-label {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity .3s linear;
+}
+.twentytwenty-after-label, .twentytwenty-before-label {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity .3s linear;
+}
+#before-image {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 2;
+}
+#after-image {
+  display: block;
+}
+.twentytwenty-handle {
+  height: 38px;
+  width: 38px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -22px;
+  margin-top: -22px;
+  border: 3px solid #fff;
+  border-radius: 1000px;
+  box-shadow: 0 0 12px rgb(51 51 51 / 50%);
+  z-index: 40;
+  cursor: pointer;
+}
+.twentytwenty-left-arrow {
+  border-right: 6px solid #fff;
+  left: 50%;
+  margin-left: -17px;
+}
+.twentytwenty-left-arrow, .twentytwenty-right-arrow {
+  width: 0;
+  height: 0;
+  border: 6px inset transparent;
+  position: absolute;
+  top: 50%;
+  margin-top: -6px;
+}
+.twentytwenty-right-arrow {
+  border-left: 6px solid #fff;
+  right: 50%;
+  margin-right: -17px;
+}
+.twentytwenty-left-arrow, .twentytwenty-right-arrow {
+  width: 0;
+  height: 0;
+  border: 6px inset transparent;
+  position: absolute;
+  top: 50%;
+  margin-top: -6px;
+}
+/* color selector components */ 
+
+.color-selector{
+  display: flex;
+ 
+}
+.color-selector .container-style{
+ width: 90px;
+ height: 90px;
+  font-family: 'Nunito', sans-serif;
+
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 12px 12px 24px rgb(104 104 104 / 64%);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+ 
+  border-radius: 10px
+};
+
+@media only screen and (max-width: 768px) {
+  .color-selector .container-style{
+    width: 30px !important;
+  height: 30px !important;
+  }
+}
