--- a/styles/style.css
+++ b/styles/style.css
@@ -266,7 +266,7 @@ align-items: center;
   border: 1px solid #f8f9fa;
   border-radius: 24px;
   padding: 32px 24px;
-  margin: 10px;
+ 
 }
 .menu-contact-button{
   text-decoration: none;
@@ -443,8 +443,8 @@ section, p {
  
 }
 .color-selector .container-style{
- width: 90px;
- height: 90px;
+ width: 50px;
+ height: 50px;
   font-family: 'Nunito', sans-serif;
 
   text-transform: uppercase;
@@ -453,14 +453,71 @@ section, p {
   transition: all 0.3s ease-in-out 0s;
   cursor: pointer;
   outline: none;
-  position: relative;
+
  
   border-radius: 10px
 };
 
-@media only screen and (max-width: 768px) {
-  .color-selector .container-style{
-    width: 30px !important;
-  height: 30px !important;
-  }
+.color-image{
+  height: 100px !important;
+  width: 100px !important;
+  padding: 0 !important;
+ 
+}
+.row{
+  --bs-gutter-x: 0 !important;
+}
+/* container anitamation components */
+.position-relative {
+  position: relative!important;
+}
+.hoverItemmm {
+  padding-top: 3rem !important;
+  z-index: 1;
+  transition: all .3s ease-in-out;
+}
+.indexxx {
+  z-index: 1;
+  width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    border-style: none;
+}
+.position-absolute {
+  position: absolute!important;
+}
+.bottom1 {
+  bottom: 1%;
+  width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    border-style: none;
+}
+.hoverItemmm:hover {
+  transform: translate(0, -50px);
+}
+.animation-button{
+  background-color: #171a20cc;
+  border: 1px solid #171a20cc;
+  color: white;
+  border-radius: 50px;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+/* contact layer component */
+
+.contact-layer{
+background-color: white;
+height: 180px;
+width: 60px !important;
+position: fixed;
+top: 130px;
+right: 10px;
+border-radius: 50px;
+box-shadow: 1px 1px 8px 1px #0e0d0d;
+display: flex;
+flex-direction: column;
+align-items: center;
+
 }
