--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,7 @@
 }
 /* Kontaktt page */
 
-.contact-page {
+/* .contact-page {
   margin-top: 120px;
 }
 .contact-title {
@@ -232,7 +232,7 @@
   border-radius: 18px;
   color: white;
   padding: 4px 0;
-}
+} */
 /* Agb Page */
 .agb-content {
   margin-top: 90px;
@@ -553,4 +553,76 @@ align-items: center;
 }
 .detail-btn:hover{
   color: white;
+}
+/* new contact page */ 
+
+.contact{
+  background-color: #0a0a0a;
+  color: white;
+  margin-top: 100px;
+}
+.contact .contact-form{
+  padding: 50px 50px 20px;
+  color: black;
+  font-size: 12px;
+  color: #0a0a0a;
+  line-height: 1.8;
+}
+.contact-select{
+  width: 240px !important;
+  height: 39px;
+  margin: 0 0 16px;
+ padding: 8px 24px 8px 8px;
+ outline: none;
+ border: 1px solid #cacaca;
+}
+.contact-input{
+
+  height: 39px;
+  margin: 0 0 16px;
+  padding: 8px 24px 8px 8px !important;
+  outline: none;
+  border: 1px solid #cacaca;
+}
+
+.contact-textarea{
+
+ 
+  margin: 0 0 16px;
+  padding: 8px 24px 8px 8px;
+  outline: none;
+  border: 1px solid #cacaca;
+}
+.contact-btn{
+  background-color: #0a0a0a;
+    color: #fff;
+    transition: background-color .25s ease-out,color .25s ease-out;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    padding: 13px 29px;
+    font-weight: bold;
+    margin-top: -2px;
+    font-size: 14px;
+}
+.contact-info{
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+.contact-info:hover{
+  color: #e7332e;
+  text-decoration: none;
+}
+.contact-info-btn{
+  background-color: #f8f9fa;
+  border-radius: 3px;
+  padding: 13px 29px;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+}
+.contact-info-btn:hover{
+ 
+  color: black;
 }
