--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,13 +12,104 @@ html{
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 * {
   box-sizing: border-box;
 }
 
+.fw-100 {
+  font-weight: 100 !important;
+}
 
+.fw-200 {
+  font-weight: 200 !important;
+}
 
+.fw-300 {
+  font-weight: 300 !important;
+}
+
+.fw-400 {
+  font-weight: 400 !important;
+}
+
+.fw-500 {
+  font-weight: 500 !important;
+}
+
+.fw-600 {
+  font-weight: 600 !important;
+}
+
+.fw-700 {
+  font-weight: 700 !important;
+}
+
+.fw-800 {
+  font-weight: 800 !important;
+}
+
+.fw-900 {
+  font-weight: 900 !important;
+}
+
+/*------------------------------------------------------- font-size -------------------------------------------------------*/
+.fz-8{
+  font-size: 8px!important;
+}
+.fz-10 {
+  font-size: 10px !important;
+}
+
+.fz-12 {
+  font-size: 12px !important;
+}
+
+.fz-14 {
+  font-size: 14px !important;
+}
+
+.fz-15 {
+  font-size: 15px !important;
+}
+
+.fz-16 {
+  font-size: 16px !important;
+}
+
+.fz-18 {
+  font-size: 18px !important;
+}
+
+.fz-20 {
+  font-size: 20px !important;
+}
+
+.fz-22 {
+  font-size: 22px !important;
+}
+
+.fz-25 {
+  font-size: 25px !important;
+}
+
+.fz-30 {
+  font-size: 30px !important;
+}
+
+.fz-40 {
+  font-size: 40px !important;
+}
+
+.fz-50 {
+  font-size: 50px !important;
+}
+.margin-bottom p{
+margin-bottom: 0;
+}
+ li{
+list-style: none !important;
+}
